--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <a href="/">Home</a>
-    <a href="/about.html">About</a>
-    <a href="/contact.html">Contact</a>
+    <a href="/about">About</a>
+    <a href="/contact">Contact</a>
+    <a href="/error">error</a>
 </body>
 </html>
